Update Detekt and fix new tech debt. Update README and CHANGELOG. Prepare for release. Enable minify of release builds.

--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -24,7 +24,7 @@ android {
         }
         release {
             debuggable false
-            minifyEnabled false // TODO: Enable once R8/D8 works with Protobuf
+            minifyEnabled true
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.txt"
         }
     }
