--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,15 +1,15 @@
 ext.versions = [
         "dbinspector"       : "5.2.8",
-        "gradle"            : '4.1.2',
+        "gradle"            : '4.1.3',
         "kotlin"            : "1.4.31",
-        "coroutines"        : "1.4.2",
+        "coroutines"        : "1.4.3",
         "core"              : "1.3.2",
         "appcompat"         : "1.2.0",
-        "activity"          : "1.2.1",
-        "fragment"          : "1.3.1",
+        "activity"          : "1.2.2",
+        "fragment"          : "1.3.2",
         "viewpager"         : "1.0.0",
-        "paging"            : "3.0.0-beta02",
-        "recyclerview"      : "1.2.0-beta02",
+        "paging"            : "3.0.0-beta03",
+        "recyclerview"      : "1.2.0-rc01",
         "startup"           : "1.0.0",
         "swiperefreshlayout": "1.1.0",
         "datastore"         : "1.0.0-alpha08",
