--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,24 @@
 [versions]
-dbinspector = "5.3.0"
+dbinspector = "5.3.2"
 gradle = "4.1.3"
 kotlin = "1.4.32"
 coroutines = "1.4.3"
 core = "1.3.2"
 appcompat = "1.2.0"
 activity = "1.2.2"
-fragment = "1.3.2"
+fragment = "1.3.3"
 lifecycle = "2.3.1"
 viewpager = "1.0.0"
-paging = "3.0.0-beta03"
+paging = "3.0.0-rc01"
 recyclerview = "1.2.0"
 startup = "1.0.0"
 swiperefresh = "1.1.0"
-datastore = "1.0.0-alpha08"
+datastore = "1.0.0-beta01"
 dynamicanimation = "1.0.0"
 design = "1.3.0"
 protobuf-core = "3.15.8"
-protobuf-plugin = "0.8.15"
-koin = "3.0.1-beta-2"
+protobuf-plugin = "0.8.16"
+koin = "3.0.1"
 fuzzy = "1.3.1"
 detekt = "1.16.0"
 ktlint = "10.0.0"
