Fix Jacoco script. Add jUnit5 and Koin test dependencies.

--- a/jacoco.gradle
+++ b/jacoco.gradle
@@ -1,16 +1,14 @@
 apply plugin: 'jacoco'
 
 jacoco {
-    toolVersion = "0.8.5"
-    reportsDir = file("$buildDir/reports/jacoco")
+    toolVersion = "0.8.6"
+    reportsDirectory.set(file("$buildDir/reports/jacoco"))
 }
 
 task jacocoTestReport(type: JacocoReport) {
     dependsOn = [
             ":dbinspector:testDebugUnitTest",
-            ":dbinspector:createDebugCoverageReport",
-            ":dbinspector-no-op:testDebugUnitTest",
-            ":dbinspector-no-op:createDebugCoverageReport"
+            ":dbinspector:createDebugCoverageReport"
     ]
 
     group = "Reporting"
@@ -26,9 +24,9 @@ task jacocoTestReport(type: JacocoReport) {
     }
 
     def includesFilter = [
-//            '**/*Mapper*.*',
-//            '**/*Presenter*.*',
-//            '**/*ViewModel*.*'
+            '**/*Converter*.*',
+            '**/*Mapper*.*',
+            '**/*ViewModel*.*'
     ]
 
     def excludesFilter = [
@@ -62,19 +60,13 @@ task jacocoTestReport(type: JacocoReport) {
     ]
 
     def sourcesTree = [
-            "./dbinspector/src/main/kotlin",
-            "./dbinspector-no-op/src/main/kotlin"
+            "./dbinspector/src/main/kotlin"
     ]
 
-    def debugTree = fileTree(dir: "./ui/build/intermediates/classes/debug", excludes: excludesFilter) +
-            fileTree(dir: "./ui/build/tmp/kotlin-classes/debug", excludes: excludesFilter) +
-            fileTree(dir: "./processor/build/classes/kotlin/main", excludes: excludesFilter) +
-            fileTree(dir: "./generator/build/classes/kotlin/main", excludes: excludesFilter) +
-            fileTree(dir: "./core/build/intermediates/classes/debug", excludes: excludesFilter) +
-            fileTree(dir: "./core/build/tmp/kotlin-classes/debug", excludes: excludesFilter)
+    def debugTree = fileTree(dir: "./dbinspector/build/intermediates/classes/debug", excludes: excludesFilter, includes: includesFilter) +
+            fileTree(dir: "./dbinspector/build/tmp/kotlin-classes/debug", excludes: excludesFilter, includes: includesFilter)
 
-    def executionTree = fileTree(dir: "./dbinspector/build", includes: ["jacoco/testDebugUnitTest.exec", "outputs/code_coverage/debugAndroidTest/connected/*coverage.ec"]) +
-            fileTree(dir: "./dbinspector-no-op/build", includes: ["jacoco/testDebugUnitTest.exec", "outputs/code_coverage/debugAndroidTest/connected/*coverage.ec"])
+    def executionTree = fileTree(dir: "./dbinspector/build", includes: ["jacoco/testDebugUnitTest.exec", "outputs/code_coverage/debugAndroidTest/connected/*coverage.ec"])
 
     getSourceDirectories().setFrom(files(sourcesTree))
     getClassDirectories().setFrom(files([debugTree]))
