--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -65,6 +65,10 @@ dependencies {
     implementation libs.material
     implementation libs.koin
     implementation libs.fuzzy
+
+    testImplementation "org.junit.jupiter:junit-jupiter:5.6.2"
+    testImplementation "io.insert-koin:koin-test:3.0.1"
+    testImplementation "io.insert-koin:koin-test-junit5:3.0.1"
 }
 
 protobuf {
