--- a/dbinspector/jacoco.gradle
+++ b/dbinspector/jacoco.gradle
@@ -5,11 +5,11 @@ jacoco {
     reportsDirectory.set(file("$buildDir/reports/jacoco"))
 }
 
-task jacocoTestReport(type: JacocoReport) {
-    dependsOn = [
-            ":dbinspector:testDebugUnitTest",
-            ":dbinspector:createDebugCoverageReport"
-    ]
+task jacocoTestReport(type: JacocoReport, dependsOn: [
+        ":dbinspector:testDebugUnitTest",
+        ":dbinspector:createDebugCoverageReport"
+]) {
+
 
     group = "Reporting"
     description = "Generate Jacoco coverage reports for both unit and instrumented unit tests"
@@ -52,6 +52,7 @@ task jacocoTestReport(type: JacocoReport) {
             '**/*$InjectAdapter.class',
             '**/*$ModuleAdapter.class',
             '**/*$ViewInjector*.class',
+            '**/*$DefaultImpls*.*',
             '**/*_MembersInjector.class', //Dagger2 generated code
             '*/*_MembersInjector*.*', //Dagger2 generated code
             '**/*_*Factory*.*', //Dagger2 generated code
@@ -60,15 +61,21 @@ task jacocoTestReport(type: JacocoReport) {
     ]
 
     def sourcesTree = [
-            "./dbinspector/src/main/kotlin"
+            "${project.projectDir}/src/main/kotlin"
     ]
 
-    def debugTree = fileTree(dir: "./dbinspector/build/intermediates/classes/debug", excludes: excludesFilter, includes: includesFilter) +
-            fileTree(dir: "./dbinspector/build/tmp/kotlin-classes/debug", excludes: excludesFilter, includes: includesFilter)
+    def debugTree = fileTree(dir: "${project.projectDir}/build/intermediates/javac/debug", excludes: excludesFilter, includes: includesFilter) +
+            fileTree(dir: "${project.projectDir}/build/tmp/kotlin-classes/debug", excludes: excludesFilter, includes: includesFilter)
 
-    def executionTree = fileTree(dir: "./dbinspector/build", includes: ["jacoco/testDebugUnitTest.exec", "outputs/code_coverage/debugAndroidTest/connected/*coverage.ec"])
+    def executionTree = fileTree(dir: "${project.projectDir}/build", includes: ["jacoco/testDebugUnitTest.exec", "outputs/code_coverage/debugAndroidTest/connected/*coverage.ec"]) +
+            fileTree(dir: "${project.projectDir}", includes: ["jacoco.exec"])
 
     getSourceDirectories().setFrom(files(sourcesTree))
     getClassDirectories().setFrom(files([debugTree]))
     getExecutionData().setFrom(files([executionTree]))
+
+    doLast {
+        // destination is defined in reports.html.destination field in this task
+        println "Test report written to file://${jacoco.reportsDir}/html/index.html"
+    }
 }
