--- a/dbinspector/jacoco.gradle
+++ b/dbinspector/jacoco.gradle
@@ -24,9 +24,9 @@ task jacocoTestReport(type: JacocoReport, dependsOn: [
     }
 
     def includesFilter = [
-            '**/*Converter*.*',
+//            '**/*Converter*.*',
             '**/*Mapper*.*',
-            '**/*ViewModel*.*'
+//            '**/*ViewModel*.*'
     ]
 
     def excludesFilter = [
