Add display names to tests. Update jUnit5.

--- a/dbinspector/jacoco.gradle
+++ b/dbinspector/jacoco.gradle
@@ -26,7 +26,7 @@ task jacocoTestReport(type: JacocoReport, dependsOn: [
     def includesFilter = [
             '**/*Converter*.*',
             '**/*Mapper*.*',
-//            '**/*ViewModel*.*'
+            '**/*ViewModel*.*'
     ]
 
     def excludesFilter = [
