--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -71,8 +71,8 @@ dependencies {
     implementation libs.koin
     implementation libs.fuzzy
 
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
-    testImplementation "org.junit.jupiter:junit-jupiter:5.6.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.7.1"
     testImplementation "io.insert-koin:koin-test:3.0.1"
     testImplementation "io.insert-koin:koin-test-junit5:3.0.1"
     testImplementation "org.mockito:mockito-core:3.5.10"
