--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -71,11 +71,15 @@ dependencies {
     implementation libs.koin
     implementation libs.fuzzy
 
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3"
     testImplementation "org.junit.jupiter:junit-jupiter:5.7.1"
     testImplementation "io.insert-koin:koin-test:3.0.1"
     testImplementation "io.insert-koin:koin-test-junit5:3.0.1"
-    testImplementation "org.mockito:mockito-core:3.5.10"
+    testImplementation "io.mockk:mockk:1.10.0"
+    testImplementation "org.mockito:mockito-core:3.8.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.1.0"
+    testImplementation 'org.mockito:mockito-inline:3.5.10'
     testImplementation "org.mockito:mockito-junit-jupiter:3.5.10"
 }
 
