--- a/.codecov.yml
+++ b/.codecov.yml
@@ -2,12 +2,8 @@ coverage:
   status:
     project:
       default:
-      target: auto
-        threshold: 1%
+        target: auto
+        threshold: 0.3
         branches:
           - master
           - develop
-      paths:
-        - ^Converter.*
-        - ^Mapper.*
-        - ^ViewModel.*
