Exclude BaseViewModel from coverage report.

--- a/dbinspector/jacoco.gradle
+++ b/dbinspector/jacoco.gradle
@@ -30,6 +30,7 @@ task jacocoTestReport(type: JacocoReport, dependsOn: [
     ]
 
     def excludesFilter = [
+            '**/BaseViewModel*.*',
             '**/*Test*.*',
             '**/AutoValue_*.*',
             '**/*JavascriptBridge.class',
