Add tests for pragma use cases.

--- a/dbinspector/jacoco.gradle
+++ b/dbinspector/jacoco.gradle
@@ -24,13 +24,14 @@ task jacocoTestReport(type: JacocoReport, dependsOn: [
     }
 
     def includesFilter = [
+            '**/*ViewModel*.*',
             '**/*Converter*.*',
             '**/*Mapper*.*',
-            '**/*ViewModel*.*'
+            '**/*UseCase*.*',
     ]
 
     def excludesFilter = [
-            '**/BaseViewModel*.*',
+            '**/base/Base*.*',
             '**/*Test*.*',
             '**/AutoValue_*.*',
             '**/*JavascriptBridge.class',
