Update Kotlin to 1.5.0. Update Android Gradle plugin to 4.2.0. Update AndroidX Paging 3.0.0. Update detekt to 1.17.0-RC2. Update JaCoCo to 0.8.7. Remove jCenter completely from project. Fix incorrect tests.

--- a/dbinspector/jacoco.gradle
+++ b/dbinspector/jacoco.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'jacoco'
 
 jacoco {
-    toolVersion = "0.8.6"
+    toolVersion = libs.versions.jacoco.get()
     reportsDirectory.set(file("$buildDir/reports/jacoco"))
 }
 
@@ -28,6 +28,7 @@ task jacocoTestReport(type: JacocoReport, dependsOn: [
             '**/*Converter*.*',
             '**/*Mapper*.*',
             '**/*UseCase*.*',
+            '**/*Repository*.*',
     ]
 
     def excludesFilter = [
