--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
 dbinspector = "5.3.3"
-gradle = "4.1.3"
-kotlin = "1.4.32"
+gradle = "4.2.0"
+kotlin = "1.5.0"
 coroutines = "1.4.3"
 core = "1.3.2"
 appcompat = "1.2.0"
-activity = "1.2.2"
+activity = "1.2.3"
 fragment = "1.3.3"
 lifecycle = "2.3.1"
 viewpager = "1.0.0"
-paging = "3.0.0-rc01"
+paging = "3.0.0"
 recyclerview = "1.2.0"
 startup = "1.0.0"
 swiperefresh = "1.1.0"
@@ -20,10 +20,12 @@ protobuf-core = "3.15.8"
 protobuf-plugin = "0.8.16"
 koin = "3.0.1"
 fuzzy = "1.3.1"
-detekt = "1.16.0"
-ktlint = "10.0.0"
+detekt = "1.17.0-RC2"
+ktlintplugin = "10.0.0"
+ktlint = "0.41.0"
 cpd = "3.1"
 dokka = "1.4.30"
+jacoco = "0.8.7"
 
 [libraries]
 library = { module = "com.infinum.dbinspector:dbinspector", version.ref = "dbinspector" }
@@ -62,7 +64,7 @@ fuzzy = { module = "me.xdrop:fuzzywuzzy", version.ref = "fuzzy" }
 detekt-plugin = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
 detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
 
-ktlint = { module = "org.jlleitschuh.gradle:ktlint-gradle", version.ref = "ktlint" }
+ktlint = { module = "org.jlleitschuh.gradle:ktlint-gradle", version.ref = "ktlintplugin" }
 
 cpd = { module = "de.aaschmid:gradle-cpd-plugin", version.ref = "cpd" }
 
