--- a/ktlint.gradle
+++ b/ktlint.gradle
@@ -1,7 +1,7 @@
 apply plugin: "org.jlleitschuh.gradle.ktlint"
 
 ktlint {
-    version = "0.41.0"
+    version = libs.versions.ktlint.get()
     debug = false
     android = true
 }
