Add test logging options. Include interactors in JaCoCo coverage reports.

--- a/dbinspector/jacoco.gradle
+++ b/dbinspector/jacoco.gradle
@@ -29,7 +29,8 @@ task jacocoTestReport(type: JacocoReport, dependsOn: [
             '**/*Repository*.*',
             '**/*Control*.*',
             '**/*Converter*.*',
-            '**/*Mapper*.*'
+            '**/*Mapper*.*',
+            '**/*Interactor*.*'
     ]
 
     def excludesFilter = [
