--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -92,6 +92,9 @@ protobuf {
 
 tasks.withType(Test) {
     useJUnitPlatform()
+    testLogging {
+        events "PASSED", "SKIPPED", "FAILED"
+    }
     finalizedBy jacocoTestReport
 }
 
