Add relevant data layer classes for test coverage. Update to Gradle 7.0.1.

--- a/dbinspector/jacoco.gradle
+++ b/dbinspector/jacoco.gradle
@@ -30,7 +30,8 @@ task jacocoTestReport(type: JacocoReport, dependsOn: [
             '**/*Control*.*',
             '**/*Converter*.*',
             '**/*Mapper*.*',
-            '**/*Interactor*.*'
+            '**/*Interactor*.*',
+            '**/data/sources**/**'
     ]
 
     def excludesFilter = [
