--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.api.tasks.testing.logging.TestLogEvent
+
 plugins {
     id "com.android.library"
     id "kotlin-android"
@@ -93,7 +95,15 @@ protobuf {
 tasks.withType(Test) {
     useJUnitPlatform()
     testLogging {
-        events "PASSED", "SKIPPED", "FAILED"
+        events TestLogEvent.FAILED, TestLogEvent.SKIPPED // , TestLogEvent.PASSED
+    }
+    afterSuite { desc, result ->
+        if (!desc.parent) {
+            def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
+            def startItem = '|  ', endItem = '  |'
+            def repeatLength = startItem.length() + output.length() + endItem.length()
+            println('\n' + ('-' * repeatLength) + '\n' + startItem + output + endItem + '\n' + ('-' * repeatLength))
+        }
     }
     finalizedBy jacocoTestReport
 }
