Add connection source tests.

--- a/dbinspector-no-op/src/main/AndroidManifest.xml
+++ b/dbinspector-no-op/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
             android:name="com.infinum.dbinspector.DbInspectorActivity"
             android:enabled="false"
             android:exported="false"
-            android:targetActivity="@null"
+            android:targetActivity="com.infinum.dbinspector.ui.databases.DatabasesActivity"
             android:taskAffinity="com.infinum.dbinspector"
             tools:node="remove" />
 
