Update dependencies. Fix deprecated methods.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,10 +3,10 @@ dbinspector = "5.3.3"
 gradle = "4.2.1"
 kotlin = "1.5.0"
 coroutines = "1.5.0"
-core = "1.3.2"
-appcompat = "1.2.0"
+core = "1.5.0"
+appcompat = "1.3.0"
 activity = "1.2.3"
-fragment = "1.3.3"
+fragment = "1.3.4"
 lifecycle = "2.3.1"
 viewpager = "1.0.0"
 paging = "3.0.0"
@@ -18,9 +18,9 @@ dynamicanimation = "1.0.0"
 design = "1.3.0"
 protobuf-core = "3.17.0"
 protobuf-plugin = "0.8.16"
-koin = "3.0.1"
+koin = "3.0.2"
 fuzzy = "1.3.1"
-detekt = "1.17.0-RC3"
+detekt = "1.17.0"
 ktlintplugin = "10.0.0"
 ktlint = "0.41.0"
 cpd = "3.1"
