--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,9 +18,21 @@ jobs:
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1.0.3
 
+  qodana:
+    name: Qodana
+    needs: [ validation ]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Qodana - Code Inspection
+        uses: JetBrains/qodana-action@v2.0-eap
+        with:
+          project-dir: ${{ github.workspace }}
+          results-dir: ${{ github.workspace }}/qodana
+          cache-dir: /home/runner/work/_temp/_github_home/qodana-cache
+
   lint:
     name: Lint
-    needs: [validation]
+    needs: [ validation ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -39,7 +51,7 @@ jobs:
 
   detekt:
     name: Detekt
-    needs: [validation]
+    needs: [ validation ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -58,7 +70,7 @@ jobs:
 
   ktlint:
     name: ktlint
-    needs: [validation]
+    needs: [ validation ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -77,7 +89,7 @@ jobs:
 
   cpd:
     name: CPD
-    needs: [validation]
+    needs: [ validation ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -96,7 +108,7 @@ jobs:
 
   tests:
     name: Tests
-    needs: [validation, lint, detekt, ktlint, cpd]
+    needs: [ validation, lint, detekt, ktlint, cpd ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
