--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Qodana - Code Inspection
         uses: JetBrains/qodana-action@v2.0-eap
         with:
-          project-dir: ../
-          results-dir: ../build/qodana
+          project-dir: ${{ github.workspace }}
+          results-dir: ${{ github.workspace }}/qodana
           cache-dir: /home/runner/work/_temp/_github_home/qodana-cache
 
   lint:
