Update dependencies. Fixed Koint breaking changes.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,35 +1,35 @@
 [versions]
 dbinspector = "5.3.4"
-gradle = "4.2.1"
-kotlin = "1.5.10"
+gradle = "4.2.2"
+kotlin = "1.5.20"
 coroutines = "1.5.0"
-core = "1.5.0"
+core = "1.6.0"
 appcompat = "1.3.0"
 activity = "1.2.3"
-fragment = "1.3.4"
+fragment = "1.3.5"
 lifecycle = "2.3.1"
 viewpager = "1.0.0"
 paging = "3.0.0"
-recyclerview = "1.2.0"
+recyclerview = "1.2.1"
 startup = "1.0.0"
 swiperefresh = "1.1.0"
-datastore = "1.0.0-beta01"
+datastore = "1.0.0-rc01"
 dynamicanimation = "1.0.0"
-design = "1.3.0"
-protobuf-core = "3.17.0"
+design = "1.4.0"
+protobuf-core = "3.17.3"
 protobuf-plugin = "0.8.16"
-koin = "3.0.2"
+koin = "3.1.2"
 fuzzy = "1.3.1"
-detekt = "1.17.0"
-ktlintplugin = "10.0.0"
+detekt = "1.17.1"
+ktlintplugin = "10.1.0"
 ktlint = "0.41.0"
 cpd = "3.1"
-dokka = "1.4.32"
+dokka = "1.5.0"
 jacoco = "0.8.7"
-junit5 = "5.7.1"
-mockk = "1.11.0"
-mockito = "3.8.0"
-mockitokotlin = "3.1.0"
+junit5 = "5.7.2"
+mockk = "1.12.0"
+mockito = "3.11.2"
+mockitokotlin = "3.2.0"
 
 [libraries]
 library = { module = "com.infinum.dbinspector:dbinspector", version.ref = "dbinspector" }
